# Backend

./: CMakeLists.txt  README.md  conanfile.txt  run.sh
src/: main.cpp
src/common/: types.h
src/core/: core.cpp  core.h  dev_man.cpp  dev_man.h  factory.cpp  factory.h
src/input/: input_man.cpp  input_man.h
src/pipeline/: buffer.h  pipeline.cpp  pipeline.h  pipeline_man.cpp  pipeline_man.h
